--- a/Portifolio/Restaurant Site/index.html
+++ b/Portifolio/Restaurant Site/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<!--
+Name: Walmir Rodrigues
+Date Created: 07/29/21
+Most recent revision: v1
+-->
 
+<head>
+<title>Restaurant Site</title>
+</head>
+
+<body>
+
+	<header>
+		Home Page
+		<hr />
+		<h1>Stupendous Seafood</h1>
+		<hr />
+	</header>
+
+
+	<nav>
+		<p>
+			<a href="index.html">Home</a>&nbsp;&nbsp;
+			<a href="Menu.html">Menu</a>&nbsp;&nbsp;
+			<a href="Contactus.html">Contact Us</a>
+		</p>
+		<hr /> 
+	</nav>
+
+	<nav>
+		<img src="images/Salmon dish.jpeg" alt="Salmon dish" />
+		<p>			
+			Stupendous Seafood is a lively seafood restaurant in Vancouver. Come in and savor our distinctive confections, enjoy happy hour, or relax with friends in a casual environment. Call us to learn about reservations, or takeout.
+		</p>
+		<hr />
+
+		<p>
+			2022 Beatty Street Vancouver, BC V2Z 2Y3 Canada  201.201.2022
+		</p>
+	</nav>
+
+
+ </body>
+ 
+</html>
