--- a/Portifolio/Restaurant Site/index.html
+++ b/Portifolio/Restaurant Site/index.html
@@ -14,7 +14,7 @@ Most recent revision: v1
 	<header>
 		Home Page
 		<hr />
-		<h1>Stupendous Seafood</h1>
+		<h1 style="text-align: center;">Stupendous Seafood</h1>
 		<hr />
 	</header>
 
@@ -29,16 +29,21 @@ Most recent revision: v1
 	</nav>
 
 	<nav>
+		<center>
 		<img src="images/Salmon dish.jpeg" alt="Salmon dish" />
+		</center>
+	
 		<p>			
 			Stupendous Seafood is a lively seafood restaurant in Vancouver. Come in and savor our distinctive confections, enjoy happy hour, or relax with friends in a casual environment. Call us to learn about reservations, or takeout.
 		</p>
 		<hr />
-
-		<p>
-			2022 Beatty Street Vancouver, BC V2Z 2Y3 Canada  201.201.2022
-		</p>
 	</nav>
+
+	<footer>
+		<p style="text-align:center">
+			2022 Beatty Street Vancouver, BC V2Z 2Y3 Canada   201.201.2022
+		</p>
+	</footer>
 
 
  </body>
