--- a/Portifolio/Restaurant Site/menu.html
+++ b/Portifolio/Restaurant Site/menu.html
@@ -53,11 +53,13 @@ Most recent revision: v1
 		</table>	
 		</p>
 		<hr />
+	</nav>
 
+	<footer>
 		<p style="text-align:center">
 			2022 Beatty Street Vancouver, BC V2Z 2Y3 Canada   201.201.2022
 		</p>
-	</nav>
+	</footer>
 
 
  </body>
