Site  About me/

--- a/Portifolio/Site  About me/index.html
+++ b/Portifolio/Site  About me/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <!--
 Name: Walmir Rodrigues
 Date Created: 07/29/21
@@ -8,6 +8,14 @@ Most recent revision: v5
 
 <head>
 <title>Your Name’s Portfolio</title>
+<link href="teststyles.css" rel="stylesheet" type="text/css" />
+<style>
+ header {
+        background-color: darkgray;
+    }
+</style>
+
+
 </head>
 
 <body>
@@ -17,19 +25,22 @@ Most recent revision: v5
 	</header>
 	
 
-	<nav> <!-- The nav element will include navigation buttons or links -->
-	    <hr /> 
+	<nav class="border"> <!-- The nav element will include navigation buttons or links -->
+	    <hr style="border: thin dotted red;" /> 
 	    <p><a href="projects.html">Projects</a></p>
 	    <p><a href="ContactMe.html">Contact Me</a></p>
 	    <p><a href="Testimonials.html">Testimonials</a></p>
-	    <hr />
+	    <hr style="width: 50%; border: 2px solid blueviolet;" />
 	</nav>
 
 
 	<section>
+
+	<nav class="border">
 		<h2><em>About Me</em></h2>
 		<img src="images/penguin.jpg" alt="Portrait of Penguin" />
 		<p>I am flightless seabirds that live almost exclusively below the equator. Some island-dwellers can be found in warmer climates, but most—including emperor, adélie, chinstrap, and gentoo penguins—reside in and around icy Antarctica. A thick layer of blubber and tightly-packed, oily feathers are ideal for colder temperatures.</p>
+	</nav>
 
 
 
@@ -103,7 +114,8 @@ Most recent revision: v5
     	</ul>
 	</article>
 	</section>
-	<footer>
+	<footer style="background-color: fuchsia">
+		@teste fjdkjfdkj fkdjfkdfjdlk
 		<hr />
 	</footer>
 	</body>
