Portifolio/Site  About me/

--- a/Portifolio/Site  About me/index.html
+++ b/Portifolio/Site  About me/index.html
@@ -56,36 +56,35 @@ tr:nth-child(odd) {
 	    <p><a href="projects.html">Projects</a></p>
 	    <p><a href="ContactMe.html">Contact Me</a></p>
 	    <p><a href="Testimonials.html">Testimonials</a></p>
+	    <div class="clear-float"></div>
 	</nav>
 
 
 	<section>
 
-	
+	<article id="aboutme">
 		<h2><em>About Me</em></h2>
-		<img src="images/penguin.jpg" alt="Portrait of Penguin" />
+		<img src="images/penguin.jpg" alt="Portrait of Penguin"  width="250" />
 		<p>I am flightless seabirds that live almost exclusively below the equator. Some island-dwellers can be found in warmer climates, but most—including emperor, adélie, chinstrap, and gentoo penguins—reside in and around icy Antarctica. A thick layer of blubber and tightly-packed, oily feathers are ideal for colder temperatures.</p>
-	
-
+	<div class="clear-float"></div>
+	</article>
 
 
 	<article id="Experiences">
 		<h2><em>Past Experiences</em></h2>
-		<img src="images/penguin-Experiences.jpg" alt="penguin in swimming" />
-			<p>Krill hunter , squid, and crabs underwater..</p>
-			<p>Hatcher.</p>
+		<img src="images/penguin-Experiences.jpg" alt="penguin swimming" width="250"/>
 
-
+		<div class="right-content">
 			<table>
 				<caption>Employment History</caption>
-				<thead>
+			<thead>
 				<tr>
 					<th>Years of employment</th>
 					<th>Title</th>
 					<th>Company</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody> 
 				<tr>
 					<td>2018-Present</td>
 					<td>Apprentice</td>
@@ -103,12 +102,15 @@ tr:nth-child(odd) {
 				</tr>
 			</tbody>
 			</table>
+		</div>
+		<div class="clear-float"></div>
 	</article>
 
 
 	<article id="hobbies">
 		<h2><em>Hobbies</em></h2>
-			<img src="images/penguin-Hobbies.jpg" alt="penguin in the ice" />
+			<img src="images/penguin-Hobbies.jpg" alt="penguin in the ice" width="250" />
+	<div class="right-content">
 			<p>Travel long distances by “tobogganing”.</p>
 			<p>Sliding across the ice.</p>
 
@@ -141,6 +143,8 @@ tr:nth-child(odd) {
 	            <li>Skiing</li>
         	</ul>
     	</ul>
+    </div>
+    	<div class="clear-float"></div>
 	</article>
 	</section>
 	<footer>	
