--- a/Portifolio/Restaurant Site Parte2/menu.html
+++ b/Portifolio/Restaurant Site Parte2/menu.html
@@ -29,7 +29,7 @@ Most recent revision: v1
 	</nav>
 
 	<nav style="background-color: #cce6ff;">
-			<table style="text-align:center; font-family: Copperplate, Papyrus, fantasy; width: 80%;">	
+			<table style="text-align:center; font-family: Copperplate, Papyrus, fantasy; width: 80%; margin: auto; " >	
 			<tr>
 	 			<th>CRAB & ARTICHOKE DIP</th>
 	 			<th>DUNGENESS CRAB CAKE</th>
@@ -49,9 +49,34 @@ Most recent revision: v1
 	 			<td>Garlic, chilies, onions, cilantro, ginger $17</td>
 				<td>Spicy tomato broth with garlic & herbs $20</td>
 				<td>Roasted garlic, caramelized onions *gluten free dough $19</td>
-	 		</tr>			
+	 		</tr>		
 			</table>	
 			</p>
+
+			<table class="tbl"; border=1>
+				<tbody class="tbl">
+					<tr >
+				 		<th colspan="2"; style="text-align: left;"> Beverages </th>	 		
+				 	</tr>
+				 	<tr>
+				 		<td>Root Beer</td>
+				 		<td>$3.00</td>
+				 	</tr>
+				 	<tr>
+				 		<td>Bottled Water</td>
+				 		<td>$1.25</td>
+				 	</tr>
+				 	<tr>
+				 		<td>Lemonade</td>
+				 		<td>$1.00</td>	 		
+				 	</tr>
+				 	<tr>
+				 		<td>Iced Tea</td>
+				 		<td>$1.25</td>
+				 	</tr>
+			 	</tbody>
+			</table>
+			
 	</nav>
 
 	<footer>
