--- a/Portifolio/Restaurant Site Parte2/index.html
+++ b/Portifolio/Restaurant Site Parte2/index.html
@@ -28,10 +28,10 @@ Most recent revision: v1
 		<hr /> 
 	</nav>
 
-	<nav style="background-color: #cce6ff";>
-		<img src="images/Salmon dish.jpeg" alt="Salmon dish" style="margin-left: auto; margin-right: auto; display: block; width: 250px;" />
+	<nav style="background-color: #cce6ff;">
+		<img src="images/Salmon dish.jpeg" alt="Salmon dish" style="margin-left: auto; margin-right: auto; display: block; width: 450px;" />
 
-		<p>			
+		<p style="text-align: center; font-family:  Garamond, serif; font-size: 25px; margin-right: auto;margin-left: auto; width: 20em">			
 			Stupendous Seafood is a lively seafood restaurant in Vancouver. Come in and savor our distinctive confections, enjoy happy hour, or relax with friends in a casual environment. Call us to learn about reservations, or takeout.
 		</p>
 		
