--- a/Portifolio/Site  About me/index.html
+++ b/Portifolio/Site  About me/index.html
@@ -47,7 +47,10 @@ tr:nth-child(odd) {
 
 <body>
 
-	<header>
+
+<div class="container">
+
+    <header class="jumbotron">
 		<h1>Portifolio for The Pinguin</h1>
 	</header>
 	
@@ -147,6 +150,7 @@ tr:nth-child(odd) {
     	<div class="clear-float"></div>
 	</article>
 	</section>
+</div>
 	<footer>	
 		@The Pinguin. All rights reserved.
 	</footer>
