--- a/Portifolio/Bootstrap/bootstrap-examples.html
+++ b/Portifolio/Bootstrap/bootstrap-examples.html
@@ -6,7 +6,7 @@
 		
                 <title>Bootstrap Sample Page</title>
 
-                <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
 
                 <style>
                 nav {
@@ -43,6 +43,8 @@
                                 <a class="btn badge-pill" href="">Projects</a>
                         </nav>
 
+
+
                         <div class="row">
                                 <div class="col-lg-3 col-md">
                                     <figure><img src="images/penguin.jpg" alt="Photo of Pinguin" class="img-fluid" /></figure>
@@ -52,12 +54,34 @@
                                     <p>Pellentesque finibus vehicula scelerisque. Morbi eget quam aliquet, vehicula felis vitae, semper odio. Curabitur turpis lectus, ultricies vel nisi vulputate, porta congue sapien. Proin facilisis ipsum at lorem scelerisque tincidunt.</p>
                                     <p>Proin convallis orci at venenatis euismod. In rhoncus ligula non nibh pellentesque rutrum. Nunc vel mauris diam.</p>
                                 </div>
-                            </div>
+                        </div>
+
+
+
+        < <div class="accordion" id="accordionExample">
+                <div class="card">
+                    <div class="card-header" id="portfolio01">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                My First Portfolio Piece
+                            </button>
+                        </h5>
+                    </div> <!-- End of #portfolio01 div -->
+                    
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                            <p><a href="" target="_blank">Name of Website</a></p>
+                            <figure><img src="images/website-1778529.png" alt="Screenshot of home page" /></figure>
+                        </div> <!-- End of .card-body div -->
+                    </div>  <!-- End of #collapseOne div -->
+
+                </div> <!-- End of first .card div -->  
+            </div>
                 </div>
 
-                <script src="js/jquery-3.3.1.min.js"></script>
-                <script src="js/popper.min.js"></script>
-                <script src="js/bootstrap.min.js"></script>        
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>      
         </body> 
 </html>
 
